titolo e immagini header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <header>
-
+        <h1>Il mio viaggio a londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg">
+        <img src="img/pexels-bill-emrich-230794-1.jpg">
+        <img src="img/pexels-bill-emrich-230794-2.jpg">
     </header>
 
     <main>
@@ -16,7 +19,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
     
 </body>
