sezione spese e tabella

--- a/index.html
+++ b/index.html
@@ -12,9 +12,30 @@
         <img src="img/pexels-bill-emrich-230794-0.jpg">
         <img src="img/pexels-bill-emrich-230794-1.jpg">
         <img src="img/pexels-bill-emrich-230794-2.jpg">
+        <hr>
     </header>
 
     <main>
+        <section>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
 
     </main>
 
