--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
                         <td>Biglietto Aereo</td>
                         <td>120€</td>
                     </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+
+                    <tfoot>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tfoot>
                 </tbody>
             </table>
+            <hr>
+        </section>
+
+        <section>
+            <h2>Cose da fare</h2>
+            <ul>
+                <li>Visitare la Tower of London &#x2717</li>
+                <li>Visitare Greenwich &#10003</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+                <li>Mangiare il tipico Fish and Chips Inglese &#x2717</li>
+            </ul>
+            <hr>
         </section>
 
     </main>
