--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
             <hr>
         </section>
 
+        <section>
+            <h2>Info utili:</h2>
+            <ol>
+                <li>
+                    Numeri di emergenza
+                    <ul>
+                        <li><strong>999</strong> -Emergenza</li>
+                        <li><strong>101</strong> -Numero polizia</li>
+                        <li><strong>111</strong> -Numero assistenza medica</li>
+                    </ul>  
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome hotel:</strong> Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong> Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo di Andata:</strong> YI234X. ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong> YI236X ore 18 30 da London Heathrow-</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+        </section>
+
     </main>
 
     <footer>
