footer e foto finali

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     Aereo
                     <ul>
                         <li><strong>Volo di Andata:</strong> YI234X. ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo di Ritorno</strong> YI236X ore 18 30 da London Heathrow-</li>
+                        <li><strong>Volo di Ritorno:</strong> YI236X ore 18 30 da London Heathrow</li>
                     </ul>
                 </li>
             </ol>
@@ -97,6 +97,9 @@
     </main>
 
     <footer>
+        <h2>Le foto</h2>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">
 
     </footer>
     
