commenti e correzioni varie

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>London trip</title>
 </head>
 <body>
+    <!-- titolo e foto iniziali -->
     <header>
         <h1>Il mio viaggio a londra</h1>
         <img src="img/pexels-bill-emrich-230794-0.jpg">
@@ -16,8 +17,11 @@
     </header>
 
     <main>
+        <!-- sezione spese -->
         <section>
             <h2>Le mie spese</h2>
+
+            <!-- tabella -->
             <table>
                 <thead>
                     <tr>
@@ -54,8 +58,11 @@
             <hr>
         </section>
 
+
+        <!-- sezione to do list -->
         <section>
             <h2>Cose da fare</h2>
+            <!-- lista non ordinata -->
             <ul>
                 <li>Visitare la Tower of London &#x2717</li>
                 <li>Visitare Greenwich &#10003</li>
@@ -65,8 +72,10 @@
             <hr>
         </section>
 
+        <!-- sezione info -->
         <section>
             <h2>Info utili:</h2>
+            <!-- lista ordinata/non ordinata -->
             <ol>
                 <li>
                     Numeri di emergenza
@@ -86,8 +95,8 @@
                 <li>
                     Aereo
                     <ul>
-                        <li><strong>Volo di Andata:</strong> YI234X. ore 9.30 da Milano Malpensa</li>
-                        <li><strong>Volo di Ritorno:</strong> YI236X ore 18 30 da London Heathrow</li>
+                        <li><strong>Volo di Andata:</strong> YI234X. ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno:</strong> YI236X ore 18:30 da London Heathrow</li>
                     </ul>
                 </li>
             </ol>
@@ -97,6 +106,7 @@
     </main>
 
     <footer>
+        <!-- foto finali -->
         <h2>Le foto</h2>
         <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">
         <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">
